argo/apps/traefik/dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lan`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 9000
  tls:
    secretName: wildcard-lan-tls
